[package]
name = "pallet-dex"
version = "0.0.1"
description = "Uniswap V1 ported to substrate"
authors = ["Adam Wierzbicki, Parity Technologies <admin@parity.io>"]
edition = "2021"
publish = false
repository = "https://github.com/paritytech/substrate-dex"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.4" , default-features = false, features = ["derive"] }

frame-benchmarking = { default-features = false, optional = true , version = "23.0.0" }
frame-support = { default-features = false, version = "23.0.0" }
frame-system = { default-features = false, version = "23.0.0" }

pallet-assets = { default-features = false, version = "24.0.0" }
scale-info = { version = "2.9.0" , default-features = false, features = ["derive"] }
sp-runtime = { default-features = false, version = "26.0.0" }
sp-std = { default-features = false, version = "10.0.0" }


[dev-dependencies]
pallet-balances = { version = "23.0.0" }
sp-core = { default-features = false, version = "23.0.0" }
sp-io = { default-features = false, version = "25.0.0" }
sp-runtime = { default-features = false, version = "26.0.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std"
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]

[workspace]
members = [
	"rpc",
	"rpc/runtime-api"
]
