[package]
name = "pallet-dex"
version = "0.0.2"
description = "Uniswap V1 ported to substrate"
authors = ["Adam Wierzbicki, Parity Technologies <admin@parity.io>"]
edition = "2021"
publish = false
repository = "https://github.com/paritytech/substrate-dex"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }

frame-benchmarking = { version = "25.0.0", optional = true }
frame-support = { default-features = false, version = "25.0.0" }
frame-system = { default-features = false, version = "25.0.0" }

pallet-assets = { default-features = false, version = "26.0.0" }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
sp-runtime = { version = "28.0.0", default-features = false }
sp-std = { default-features = false, version = "12.0.0" }


[dev-dependencies]
pallet-balances = { version = "25.0.0" }
sp-core = { default-features = false, version = "25.0.0" }
sp-io = { default-features = false, version = "27.0.0" }
sp-runtime = { default-features = false, version = "28.0.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std"
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]

[workspace]
members = [
	"rpc",
	"rpc/runtime-api"
]
