[package]
name = "pallet-dex-rpc"
version = "0.0.1"
description = "RPC interface fot the DEX pallet"
authors = ["Adam Wierzbicki, Parity Technologies <admin@parity.io>"]
edition = "2021"
publish = false
repository = "https://github.com/paritytech/substrate-dex"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.4" , default-features = false, features = ["derive"] }
jsonrpsee = { version = "0.16.3" , features = ["server", "macros"] }

pallet-dex-rpc-runtime-api = { version = "0.0.1", path = "./runtime-api" }

sp-api = { default-features = false, version = "21.0.0" }
sp-blockchain = { default-features = false, version = "23.0.0" }
sp-runtime = { default-features = false, version = "26.0.0" }

[dev-dependencies]
pallet-dex = { version = "0.0.1", path = ".." }
sc-client-api = { version = "23.0.0" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
tokio = { version = "1.32.0" , features = ["macros", "time", "parking_lot"] }
