[package]
name = "pallet-dex-rpc-runtime-api"
version = "0.0.1"
description = "RPC runtime API fot the DEX pallet"
authors = ["Adam Wierzbicki <adam.wierzbicki@parity.io>"]
edition = "2021"
publish = false
repository = "https://github.com/Wiezzel/substrate-dex"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }

pallet-dex = { version = "0.0.1", default-features = false, path = "../.." }
sp-api = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31" }
sp-runtime = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31" }

[features]
default = ["std"]
std = [
	"codec/std",
	"pallet-dex/std",
	"sp-api/std",
	"sp-runtime/std",
]
