[package]
name = "pallet-dex-rpc-runtime-api"
version = "0.0.1"
description = "RPC runtime API fot the DEX pallet"
authors = ["Adam Wierzbicki, Parity Technologies <admin@parity.io>"]
edition = "2021"
publish = false
repository = "https://github.com/paritytech/substrate-dex"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { version = "3.6.4", default-features = false, features = ["derive"] }

pallet-dex = { version = "0.0.1", default-features = false, path = "../.." }
sp-api = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime = { default-features = false, version = "24.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"pallet-dex/std",
	"sp-api/std",
	"sp-runtime/std",
]
